About page photo fixed on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -53,5 +53,6 @@ body {
 }
 
 #groupPhoto {
-	width: 70%;
+	width: 500px;
+	height: auto;
 }
